--- a/yaapp/templates/yabase/webapp.html
+++ b/yaapp/templates/yabase/webapp.html
@@ -324,7 +324,7 @@
 			<p id="img-users">
 				
 				<a href="#" id="footer-button">
-				    <span id="footer-button-text">Tous les voir</span>
+				    <span id="footer-button-text">{% trans "See all" %}</span>
 				</a>
 			</p>
 		</div>
@@ -333,7 +333,7 @@
 		</div>
 		<div id="minutes" class="blocks">
 			<span class="footer-text-color1" >0</span>
-			<p class="footer-text-color2" >minutes de musique ont été écoutées</p>
+			<p class="footer-text-color2" >{% trans "minutes of music have been played" %}</p>
 		</div>
 	<p id="copyright">&copy; Yasound 2012</p>
 	</footer>
