--- a/yaapp/templates/yabase/webapp.html
+++ b/yaapp/templates/yabase/webapp.html
@@ -51,6 +51,7 @@
     <script type="text/javascript" src='/media/js/Namespace.js'></script>
     <script type="text/javascript" src='/media/js/colibri/colibri.js'></script>
     <script type="text/javascript" src='/media/js/chosen/chosen.jquery.min.js'></script>
+    <script type="text/javascript" src="/media/js/jquery.imgr.min.js"></script>
     
     {% compressed_js 'webapp-all' %}
     <script type="text/javascript">
