--- a/yaapp/templates/yabase/webapp.html
+++ b/yaapp/templates/yabase/webapp.html
@@ -207,94 +207,73 @@
         <div class="container">
 			<div id="brand-logo">
 				<a href="brand-logo" {% url webapp %}>
-					<img src="../../media/app/images/brand-logo.png" width="138" height="23" alt="Logo Yasound">
+					<img src="/media/app/images/brand-logo.png" width="138" height="23" alt="Logo Yasound">
 				</a>
 			</div>
 			<div class="header-separation">
-				<img src="../../media/app/images/header-separation.png" width="4" height="54" alt="Header Separation">
+				<img src="/media/app/images/header-separation.png" width="4" height="54" alt="Header Separation">
 			</div>
 			<div id="audio-quality">
 				<a href="#">
-					<img id="audio-quality-padding" src="../../media/app/images/btn-sound-quality.png" width="28" height="28" alt="Btn Sound Quality">
+					<img id="audio-quality-padding" src="/media/app/images/btn-sound-quality.png" width="28" height="28" alt="Btn Sound Quality">
 				</a>
-				<img id="SD" class="audio-quality-padding" src="../../media/app/images/SD.png" width="21" height="12" alt="SD">
+				<img id="SD" class="audio-quality-padding" src="/media/app/images/SD.png" width="21" height="12" alt="SD">
 			</div>
 			<div id="radio-picto">
 				<a href="#">
-					<img src="../../media/app/images/radio-picto.png" width="32" height="32" alt="Radio Picto">
+					<img src="/media/app/images/radio-picto.png" width="32" height="32" alt="Radio Picto">
 				</a>
 			</div>
 			<div id="favoris-radio">
-				<img src="../../media/app/images/favorite-radio.png" width="37" height="36" alt="Favorite Radio">
+				<img src="/media/app/images/favorite-radio.png" width="37" height="36" alt="Favorite Radio">
 			</div>
-			<div id="play-btn">
-			
+			<div id="play-btn"> 
 			</div>
-          	<div class="nav-collapse">
-            	<div class='pull-right'>
-                	<div id='user-menu' class='btn-toolbar'>            
-                		{% if request.user.is_authenticated %}
-                        <div class='btn-group'>
-                        <a class="btn dropdown-toggle" data-toggle="dropdown" href="#">
-                        <i class="icon-eye-open"></i>
-                           {% trans "Notifications" %}
-                        <span class="caret"></span> </a>
-                        <ul class="dropdown-menu" id='notifications-menu'>
-                            <li class="divider"></li>
-                            <li><a href="{% url webapp_notifications %}" id='btn-notifications'>{% trans "All notifications" %}</a></li>
-                        </ul>
-                        </div>
-                                                
-                        <div class='btn-group'>
-                        <a class="btn dropdown-toggle" data-toggle="dropdown" href="#">
-                        <i class="icon-user"></i>
-                            {{ request.user.userprofile }} 
-                        <span class="caret"></span> </a>
-						<ul class="dropdown-menu">
-							<li><a href="{% url webapp_radio user_uuid %}" id='btn-my-radio' yasound:uuid='{{ user_uuid }}'>{% trans "My radio" %}</a></li>
-							<li><a href="{% url webapp_favorites %}" id='btn-favorites'>{% trans "My favorites" %}</a></li>
-							<li><a href="{% url webapp_friends %}" id='btn-friends'>{% trans "My friends" %}</a></li>
-	                        <li class="divider"></li>
-                            <li><a href="{% url webapp_programming %}" id='btn-programming'>{% trans "Radio programming" %}</a></li>
-                            <li><a href="{% url webapp_profile request.user.username %}" id='btn-my-profile'>{% trans "My profile" %}</a></li>
-                            <li><a href="{% url webapp_settings %}" id='btn-settings'>{% trans "Settings" %}</a></li>
-                            <li class="divider"></li>
-    						<li><a href="{% url logout %}">{% trans "Logout" %}</a></li>
-						</ul>
-						</div>
-                {% else %}
-                        <a class="btn dropdown-toggle" data-toggle="dropdown" href="#">
-                        <i class="icon-user"></i>
-                            {% trans "Not logged" %}
-                        <span class="caret"></span> </a>
-                {% endif %}
-                </div>       
-                <div>         
-                    <form class="navbar-search pull-right" action="" id='tbar-search'>
-                    <input class="search-query span2" type="text" id='search-input' placeholder="{% trans 'Search' %}">
-                    </form>
-                </div>    
-            </div>
-
-
-          </div><!--/.nav-collapse -->
-            <div id='player'>
-            </div>
-            <div class='nav-collapse'>
-				<!-- AddThis Button BEGIN -->
-				<div class="addthis_toolbox addthis_default_style ">
-				<a class="addthis_button_facebook_like" fb:like:layout="button_count"></a>
-				<a class="addthis_button_google_plusone" g:plusone:size="medium"></a>
-				<a class="addthis_counter addthis_pill_style"></a>
+			<div id="sound-level">
+				<div id="min-level">
+					<img src="/media/app/images/lower-volume.png" width="8" height="10" alt="Lower Volume">
 				</div>
-<!-- 				<script type="text/javascript">var addthis_config = {"data_track_addressbar":true};</script>
-				<script type="text/javascript" src="https://s7.addthis.com/js/250/addthis_widget.js#pubid=ra-4f910520446e8625"></script>
- -->				<!-- AddThis Button END -->
-            
-            </div>
-        </div>
-      </div>
-    </div>
+				<div id="level-bar">
+				</div>
+				<div id="max-level">
+					<img src="/media/app/images/higher-volume.png" width="11" height="11" alt="Higher Volume">
+				</div>
+			</div>
+		</div>
+		<div id="sub-header">
+			<div class="container" id="sub-header-container">
+				<ul id="sub-header-nav">
+					<li class="first"><a href='#'>Sélection</a></li>
+					<li><a href='#'>Top</a></li>
+					<li><a href='#'>Mes amis</a></li>
+					<li><a href='#'>Favoris</a></li>
+				</ul>
+				<div>
+					<form>
+						<p id="form">
+							<select name="music-style" id="">
+								<option value="#">Genre</option>
+								<option value="#">Jazz</option>
+								<option value="#">Rock</option>
+								<option value="#">Blues</option>
+								<option value="#">Pop</option>
+								<option value="#">Country</option>
+								<option value="#">Rap</option>
+							</select>
+						</p>
+					</form>
+				</div>
+				<div id="sub-header-separation">
+				</div>
+					<a id="create-radio" href="#">
+						<span> Créer une radio </span>
+					</a>
+				<div id="search-bar">
+					<input type="text" class="search-query" placeholder="Rechercher">
+				</div>
+			</div>
+		</div>
+	</div>
     
 <div id='webapp-container'>{% block content%}{%endblock%}</div>
 
@@ -319,7 +298,7 @@
 		</div>
 
 		<div class="footer-separation">
-			<img src="../../media/app/images/separation.png" width="4" height="81" alt="separation">
+			<img src="/media/app/images/separation.png" width="4" height="81" alt="separation">
 		</div>
 		
 		<div id="connected-users" class="blocks">
@@ -327,19 +306,19 @@
 				{% trans "Connected users" %}
 			</p>
 			<p id="img-users">
-				<img class="individual-pictures" src="../../media/app/images/portrait1.png" width="34" height="34" alt="portrait">
-				<img class="individual-pictures" src="../../media/app/images/portrait1.png" width="34" height="34" alt="portrait">
-				<img class="individual-pictures" src="../../media/app/images/portrait1.png" width="34" height="34" alt="portrait">
-				<img class="individual-pictures" src="../../media/app/images/portrait1.png" width="34" height="34" alt="portrait">
-				<img class="individual-pictures" src="../../media/app/images/portrait1.png" width="34" height="34" alt="portrait">
-				<img class="individual-pictures" src="../../media/app/images/portrait1.png" width="34" height="34" alt="portrait">
-				<img class="individual-pictures" src="../../media/app/images/portrait1.png" width="34" height="34" alt="portrait">
-				<img class="individual-pictures" src="../../media/app/images/portrait1.png" width="34" height="34" alt="portrait">
-				<img class="individual-pictures" src="../../media/app/images/portrait1.png" width="34" height="34" alt="portrait">
-				<img class="individual-pictures" src="../../media/app/images/portrait1.png" width="34" height="34" alt="portrait">
-				<img class="individual-pictures" src="../../media/app/images/portrait1.png" width="34" height="34" alt="portrait">
-				<img class="individual-pictures" src="../../media/app/images/portrait1.png" width="34" height="34" alt="portrait">
-				<img class="individual-pictures" src="../../media/app/images/portrait1.png" width="34" height="34" alt="portrait">
+				<img class="individual-pictures" src="/media/app/images/portrait1.png" width="34" height="34" alt="portrait">
+				<img class="individual-pictures" src="/media/app/images/portrait1.png" width="34" height="34" alt="portrait">
+				<img class="individual-pictures" src="/media/app/images/portrait1.png" width="34" height="34" alt="portrait">
+				<img class="individual-pictures" src="/media/app/images/portrait1.png" width="34" height="34" alt="portrait">
+				<img class="individual-pictures" src="/media/app/images/portrait1.png" width="34" height="34" alt="portrait">
+				<img class="individual-pictures" src="/media/app/images/portrait1.png" width="34" height="34" alt="portrait">
+				<img class="individual-pictures" src="/media/app/images/portrait1.png" width="34" height="34" alt="portrait">
+				<img class="individual-pictures" src="/media/app/images/portrait1.png" width="34" height="34" alt="portrait">
+				<img class="individual-pictures" src="/media/app/images/portrait1.png" width="34" height="34" alt="portrait">
+				<img class="individual-pictures" src="/media/app/images/portrait1.png" width="34" height="34" alt="portrait">
+				<img class="individual-pictures" src="/media/app/images/portrait1.png" width="34" height="34" alt="portrait">
+				<img class="individual-pictures" src="/media/app/images/portrait1.png" width="34" height="34" alt="portrait">
+				<img class="individual-pictures" src="/media/app/images/portrait1.png" width="34" height="34" alt="portrait">
 				
 				<a href="#" id="footer-button">
 				    <span id="footer-button-text">Tous les voir</span>
@@ -347,7 +326,7 @@
 			</p>
 		</div>
 		<div class="footer-separation">
-			<img src="../../media/app/images/separation.png" width="4" height="81" alt="separation">
+			<img src="/media/app/images/separation.png" width="4" height="81" alt="separation">
 		</div>
 		<div id="minutes" class="blocks">
 			<span class="footer-text-color1" >232 523</span>
