--- a/yaapp/templates/yabase/app/favoritesPage.mustache
+++ b/yaapp/templates/yabase/app/favoritesPage.mustache
@@ -1,4 +1,5 @@
 {% load i18n %}
+<div id='post-submenu'>&nbsp;</div>
 <div class='span12'>
     <h1>{% trans "My favorites" %}</h1>
     <ul id='results' class='thumbnails'>
