--- a/yaapp/templates/yabase/app/friends/friendsPage.mustache
+++ b/yaapp/templates/yabase/app/friends/friendsPage.mustache
@@ -1,4 +1,5 @@
 {% load i18n %}
+<div id='post-submenu'>&nbsp;</div>
 <div class='span12'>
     <h1>{% trans "My friends" %}</h1>
     <ul id='results'>
