--- a/yaapp/templates/yabase/app/home/homePage.mustache
+++ b/yaapp/templates/yabase/app/home/homePage.mustache
@@ -1,4 +1,5 @@
 {% load i18n %}
+<div id='post-submenu'>&nbsp;</div>
 <div class='row'>
     <div class='span12'>
         <div class='page-header'>
