search now works

--- a/yaapp/templates/yabase/app/common/subMenu.mustache
+++ b/yaapp/templates/yabase/app/common/subMenu.mustache
@@ -28,7 +28,7 @@
                         <span> Créer une radio </span>
                     </a>
                 <div id="search-bar">
-                    <input type="text" class="search-query" placeholder="Rechercher">
+                    <input type="text" class="search-query" id="search-input" placeholder="Rechercher">
                 </div>
             </div>
         </div>
