--- a/yaapp/templates/yabase/app/searchPage.mustache
+++ b/yaapp/templates/yabase/app/searchPage.mustache
@@ -1,3 +1,4 @@
+<div id='post-submenu'>&nbsp;</div>
 <div class='span12'>
     <ul id='results' class='thumbnails'></ul>
     <div id='pagination'></div>
