search bar issue

--- a/yaapp/templates/yabase/app/common/subMenu.mustache
+++ b/yaapp/templates/yabase/app/common/subMenu.mustache
@@ -27,8 +27,11 @@
                     <a id="create-radio" href="#">
                         <span> Créer une radio </span>
                     </a>
-                <div id="search-bar">
-                    <input type="text" class="search-query" id="search-input" placeholder="Rechercher">
-                </div>
+  
+					<div id="search-bar">
+                    	<input type="text" id="search-input" placeholder="Rechercher">
+						<input type="submit" id="search-symbol">
+                	</div>
+
             </div>
         </div>
