--- a/yaapp/media/css/webapp.css
+++ b/yaapp/media/css/webapp.css
@@ -115,7 +115,7 @@ body {
     font-weight: bold;  
     color:#1C94C4;  
     outline:none;  
-    top:-7px;  
+    top:-9px;  
     margin-left:-12px;
     border:none;
 }
@@ -267,21 +267,23 @@ form {
 
 #search-bar {
 	background:#FFF;
-}
-
-#search-bar input {
+	border-radius:20px;
 	display:inline-block;
 	float:left;
 	height:24px;
 	width:152px;
 	margin: 2px 0px 0px 114px;
 	font-size:15px;
-	border-radius:20px;
-	padding-left:20px;
 	color:#b0b6b8;
-	background-image:url('../app/images/search-bar-symbol.png');
-	background-repeat:no-repeat;
-	background-position:90% 50%;
+}
+
+#search-input {
+	height:24px;
+	width:152px;
+}
+
+#search-bar #search-symbol {
+	background-image:url('../app/images/separation.png');
 }
 
 /**
