--- a/yaapp/templates/yabase/app/common/subMenu.mustache
+++ b/yaapp/templates/yabase/app/common/subMenu.mustache
@@ -27,11 +27,9 @@
                     <a id="create-radio" href="#">
                         <span> Créer une radio </span>
                     </a>
-  
-					<div id="search-bar">
-                    	<input type="text" id="search-input" placeholder="Rechercher">
-						<input type="submit" id="search-symbol">
+                	<div id="search-bar">
+						<input type="text" id="search-input" class="unstyle" placeholder="Rechercher"/>
+						<input type="submit" value="" id="search-symbol" class="unstyle"/>
                 	</div>
-
             </div>
         </div>
