--- a/yaapp/templates/yabase/app/common/subMenu.mustache
+++ b/yaapp/templates/yabase/app/common/subMenu.mustache
@@ -11,17 +11,17 @@
 				<div class="header-separation">
 					<img src="/media/app/images/header-separation.png" width="4" height="54" alt="Header Separation">
 				</div>
-				<div >
-						<input class="input-switch" id="switch1" type="checkbox" />
-						<label for="switch1"></label>
+				<div id="sound-quality">
+					<input class="input-switch" id="switch1" type="checkbox" />
+					<label for="switch1"></label>
 				</div>
 				<div id="radio-picto">
 					<a href="#">
 						<img src="/media/app/images/radio-picto.png" width="32" height="32" alt="Radio Picto">
 					</a>
 				</div>
-				<div id="favoris-radio">
-					<img src="/media/app/images/favorite-radio.png" width="37" height="36" alt="Favorite Radio">
+				<div>
+					<a id="favorite-radio" href="#"></a>
 				</div>
 				<div id="play-btn"> 
 				</div>
@@ -34,6 +34,28 @@
 					<div id="max-level">
 						<img src="/media/app/images/higher-volume.png" width="11" height="11" alt="Higher Volume">
 					</div>
+				</div>
+				<div class="header-social-btn" id="first-social-btn">
+					<img src="/media/app/images/header-share-btn.png" width="27" height="21" alt="Header Share Btn">
+				</div>
+				<div class="header-social-btn">
+					<img src="/media/app/images/header-love-btn.png" width="23" height="20" alt="Header Love Btn">
+				</div>
+				<div class="header-social-btn">
+					<img src="/media/app/images/header-shop-btn.png" width="27" height="22" alt="Header Shop Btn">
+				</div>
+				<div class="header-separation">
+					<img src="/media/app/images/header-separation.png" width="4" height="54" alt="Header Separation">
+				</div>
+				<div id="profile-picture">
+					<img src="/media/app/images/profile-picture.png" width="38" height="38" alt="Profile Picture">
+				</div>
+				<div class="notification">
+					<span class="badge badge-info" id="message-position-absolute">4</span>
+					<img src="/media/app/images/notification-picto.png" width="36" height="33" alt="Notification Picto">
+				</div>
+				<div class="notification" id="last-social-btn">
+					<img src="/media/app/images/gift-picto.png" width="34" height="32" alt="Gift Picto">
 				</div>
 			</div>
 		<div id="sub-header">
