--- a/yaapp/media/css/webapp.css
+++ b/yaapp/media/css/webapp.css
@@ -44,6 +44,13 @@ body {
 	margin-left:20px;
 }
 
+#sound-quality{
+	display:inline-block;
+	float:left;
+	padding-top:25px;
+	padding-left:20px;
+}
+
 /*bg slider*/
 .input-switch:not(:checked),.input-switch:checked { 
     display: none;
@@ -86,70 +93,6 @@ body {
     right: -4px;
 }
 
-
-
-
-/*
-.input-switch:not(:checked),.input-switch:checked { 
-    display: none; 
-}
-
-.input-switch + label {
-    position:relative;
-	display: inline-block;
-	float:left;
-    height: 25px;
-    width: 73px;
-    overflow: hidden;
-    background-image: url('../app/images/sound-quality-bg.png');
-	background-repeat:repeat-x;
-	border-radius:20px;
-}
-
-.input-switch + label::before {
-    position: absolute;
-    display: inline-block;
-    top: 0px; left	: 0px;
-    height: 31px; width: 31px;
-    cursor: pointer;
-    background-image:url('../app/images/btn-sound-quality.png');
-    content: '';
-}
-
-.input-switch:checked + label {
-    background-color: #05C;
-}
-
-.input-switch:checked + label::before {
-    position:relative;
-	left: auto;
-    right: 0px;
-}
-*/
-
-
-
-
-#audio-quality-padding {
-	padding-left:0px;
-	padding-top:1px;
-}
-
-#SD {
-	padding-bottom:4px;
-	padding-left:5px;
-}
-
-#audio-quality:after{
-	background-image:url('../app/images/HD.png');
-	position:relative;
-	top:10px	;
-}
-
-#SD:active {
-	padding-bottom:7px;
-}
-
 #radio-picto {
 	height:32px;
 	width:32px;
@@ -158,7 +101,17 @@ body {
 	margin: 21px 0px 0px 21px;
 }
 
-#favoris-radio {
+#favorite-radio {
+	background-image:url("/media/app/images/favorite-radio.png") ;
+	height:36px;
+	width:37px;
+	display:inline-block;
+	float:left;
+	margin: 21px 0px 0px 19px;
+}
+
+#favorite-radio:hover{
+	background-image:url('../app/images/over-star.png');
 	height:36px;
 	width:37px;
 	display:inline-block;
@@ -181,6 +134,8 @@ body {
 	width:190px;
 	height:100px;
 	display:inline-block;
+	padding-top:25px;
+	padding-left:20px;
 }
 
 #title-volume {
@@ -215,6 +170,11 @@ body {
 	background-color:black;
 }
 
+#sound-level {
+	display:inline-block;
+	float:left;
+}
+
 #volume-slider{  
     margin-right: 10px;
 	height:9px;
@@ -237,6 +197,54 @@ body {
 #max-level {
 	display:inline-block;
 	float:right;
+}
+
+
+.header-social-btn {
+	float:left;
+	display:inline-block;
+	padding: 31px 0px 0px 10px;
+}
+
+#first-social-btn {
+	padding-left:17px;
+}
+
+#profile-picture{
+	float:left;
+	display:inline-block;
+	padding: 19px 0px 0px 16px;
+}
+
+.notification {
+	position:relative;
+	float:left;
+	display:inline-block;
+	padding: 19px 0px 0px 25px;
+}
+
+#message-position-absolute{
+	display:inline-block;
+	height:20px;
+	width:20px;
+	position:absolute;
+	background-image:url('../app/images/messages-bg-color.png');
+	background-repeat:repeat-x;
+	top:29px;
+	left:32px;
+	border-radius:20px;
+	border:1px solid #0f2937;
+	font-family:Arial;
+	font-size:12px;
+	overflow:hidden;
+	line-height:20px;
+	padding:0px;
+	text-align:center;
+}
+
+#last-social-btn {
+	float:right;
+	margin-top:2px;
 }
 
 #header .brand {
