betatest recruiting phase finished

--- a/yaapp/apps/yaweb/templates/yaweb/betatest.html
+++ b/yaapp/apps/yaweb/templates/yaweb/betatest.html
@@ -49,15 +49,8 @@
 			<h2>Vous êtes intéressé(e) ?</h2>
 			<p class='lead'>Remplissez ce formulaire avant le 13 juillet
 				prochain :</p>
-			<form method='post' class="form-horizontal well" id='betatest-form'>
-				{% csrf_token %}
-				<fieldset>
-					{{ form }} <br />
-					<div class="form-actions">
-						<button type="submit" class="btn btn-primary">Soumettre votre candidature</button>
-					</div>
-				</fieldset>
-			</form>
+				
+			<p class='lead'>Le recrutement est à présent terminé, merci à tous pour votre participation.</p>
 		</div>
 </body>
 </html>
