--- a/yaapp/templates/yabase/app/common/subMenu.mustache
+++ b/yaapp/templates/yabase/app/common/subMenu.mustache
@@ -73,7 +73,7 @@
             <div class="container" id="sub-header-container">
 				<div id="sub-header-pointer"></div>
                 <ul id="sub-header-nav">
-                    <li class="first"><a href='#' id="selection">{% trans "Selection" %}</a></li>
+                    <li class="first selected"><a href='#' id="selection">{% trans "Selection" %}</a></li>
                     <li><a href='#' id='top'>{% trans "Top" %}</a></li>
                     <li><a href='#' id='friends'>{% trans "My friends" %}</a></li>
                     <li><a href='#' id='favorites'>{% trans "Favorites" %}</a></li>
