--- a/yaapp/templates/yabase/app/common/subMenu.mustache
+++ b/yaapp/templates/yabase/app/common/subMenu.mustache
@@ -11,10 +11,8 @@
 				<div class="header-separation">
 					<img src="/media/app/images/header-separation.png" width="4" height="54" alt="Header Separation">
 				</div>
-				<div id="sound-quality">
-					<input class="input-switch" id="switch1" type="checkbox" />
-					<label for="switch1"></label>
-					<img id="SD" src="/media/app/images/SD.png" width="21" height="12" alt="SD">
+				<div class="switch-container">
+					<span class="switch"></span>
 				</div>
 				<div id="radio-picto">
 					<a href="#">
