--- a/yaapp/templates/yabase/app/common/subMenu.mustache
+++ b/yaapp/templates/yabase/app/common/subMenu.mustache
@@ -11,9 +11,11 @@
 				<div class="header-separation">
 					<img src="/media/app/images/header-separation.png" width="4" height="54" alt="Header Separation">
 				</div>
-				<div class="switch-container">
-					<span class="switch"></span>
-				</div>
+				
+                <div class="switch-container">
+                    <input type="checkbox"/>
+                    <span class='hd-bg' />
+                </div>                				
 				<div id="radio-picto">
 					<a href="#">
 						<img src="/media/app/images/radio-picto.png" width="32" height="32" alt="Radio Picto">
