refactored skin to different views

--- a/yaapp/templates/yabase/app/common/subMenu.mustache
+++ b/yaapp/templates/yabase/app/common/subMenu.mustache
@@ -1,6 +1,6 @@
 {% load i18n %}
 {% load thumbnail %}        
-<div class="navbar navbar-fixed-top" id='header'>
+<div class="navbar navbar-fixed-top" id='header2'>
 	<div class="navbar-inner">
 		<div class="container">
 				<div id="brand-logo">
