--- a/yaapp/media/css/webapp.css
+++ b/yaapp/media/css/webapp.css
@@ -184,21 +184,23 @@ body {
 }
 
 #play-btn {
-	height:33px;
+    -webkit-appearance: none;
+    border: none;
+    height:33px;
 	width:33px;
 	display:inline-block;
 	float:left;
 	margin: 21px 0px 0px 19px;
-	border-radius:28px;
+	border-radius:50%;
 	background-image:url('../app/images/play-btn-bg.png');
 	box-shadow: 0px 1px 4px black;
 	position:relative;
 }
 
-#pause-symbol {
+#play-btn i {
 	position:absolute;
-	top:10px;
-	left:11px;
+	top:9px;
+	left:10px;
 }
 
 #sound-level {
@@ -247,7 +249,7 @@ body {
 }
 
 #volume-slider{  
-    margin-right: 10px;
+	margin-top:10px;
 	height:9px;
 	width:149px;
 	background: url('../app/images/level-bar.png');
@@ -797,6 +799,9 @@ input::-webkit-input-placeholder {
 /**
  * Player
  */
+#player {
+} 
+
 #player .picture {
 	float: left;
 	margin-left: 12px;
@@ -1000,6 +1005,9 @@ ul .user-cell:hover .caption {
 
 #user-menu {
 	margin-top: 0px;
+	margin-left:0;
+	padding-left:0;
+	width:210px;
 }
 
 /**
