--- a/yaapp/templates/yabase/app/track.mustache
+++ b/yaapp/templates/yabase/app/track.mustache
@@ -9,27 +9,29 @@
         <img id='track-image' src='<% cover %>' width="32" height="32" alt="Radio Picto">
     </a>
 </div>
-<div>
     <a id="favorite-radio" href="#"></a>
-</div>
     <a id="play-btn">
         <i class="icon-play"></i>
     </a>
+
 <div id="sound-level">
     <div id="min-level">
         <img src="/media/app/images/lower-volume.png" width="8" height="10" alt="Lower Volume">
     </div>
 
-    <div>
-    <span class="tooltip"></span>  
-    <div id="volume-slider"></div>  
-    <span class="volume"></span> 
+    <div id='slider-container'>
+        <div id='player-title'><% name %> {% trans "By" %} <strong><span id='track-artist'><% artist %></span></strong></div>
+        <span class="tooltip"></span>  
+        <div id="volume-slider"></div>  
+        <span class="volume"></span> 
     </div>
     
     <div id="max-level">
         <img src="/media/app/images/higher-volume.png" width="11" height="11" alt="Higher Volume">
     </div>
 </div>
+
+
 <div class="header-social-btn" id="first-social-btn">
     <a href="#" id="share-btn"></a>
 </div>
