--- a/yaapp/templates/yabase/webapp.html
+++ b/yaapp/templates/yabase/webapp.html
@@ -16,10 +16,6 @@
     <meta name="language" content="french" />
     <link rel="stylesheet" href="/media/bootstrap/css/bootstrap.min.css"/>
 
-    <!--[if lte IE 7] -->
-        <link rel="stylesheet" href="/media/css/ie.css"/>
-    <!--<![endif]-->
-
 {% block extra_head %}
     {% block fb_open_graph %}{% endblock %}
     
@@ -58,6 +54,11 @@
     <script type="text/javascript" src="/media/js/jquery.imgr.min.js"></script>
     <script type="text/javascript" src="/media/jquery-ui-1.8.21.custom/js/jquery-ui-1.8.21.custom.min.js"></script>
     
+	<!--[if (gte IE 6)&(lte IE 8)]>
+	  <script type="text/javascript" src="/media/js/selectivizr-min.js"></script>
+	  <noscript><link rel="stylesheet" href="/media/css/ie.css" /></noscript>
+	<![endif]-->
+
     {% compressed_js 'webapp-all' %}
     <script type="text/javascript">
        moment.lang('{{request.LANGUAGE_CODE}}');
